Bug #17720 Partition ALTER TABLE fails on rename of .MYI file
Submitted: 26 Feb 2006 1:33 Modified: 9 Mar 2006 2:38
Reporter: Kent Boortz Email Updates:
Status: Closed
Category:Server: Partition Severity:S2 (Serious)
Version:5.1.7-beta OS:Microsoft Windows (Windows)
Assigned to: Reggie Burnett Target Version:

[26 Feb 2006 1:33] Kent Boortz
Description:
The 'partition' test case fails with

At line 324: query 'alter table t1 reorganize partition p2 into 
(partition p2 values less than (30))' 
failed: 7: Error on rename of '.\test\t1#P#p2#TMP#.MYI' 
to '.\test\t1#P#p2.MYI' (Errcode: 13)

How to repeat:
Run 'partition' test case on Windows
[8 Mar 2006 15:16] Reggie Burnett
Fixed in 5.1.8.  Fixed by properly signalling to the underlying table handlers that they
should prepare for a delete.
[9 Mar 2006 2:38] Jon Stephens
Thank you for your bug report. This issue has been addressed in the
documentation. The updated documentation will appear on our website
shortly, and will be included in the next release of the relevant
product(s).

Additional info:

Documented fix in 5.1.8 changelog. Closed.