Bug #17720 Partition ALTER TABLE fails on rename of .MYI file

Fix this by passing the HA_EXTRA_PREPARE_FOR_DELETE onto the newly added or about to be dropped partitions
so they have an opportunity to close their OS file handle.